# fzgpt-terminal-base-ai

./: .gitignore  README.md  install.command  pyproject.toml  setup.py
scripts/: install.bat  install.ps1  install.sh
src/fzgpt/: cli.py  config.py  doctor.py  model.py  paths.py  session.py  tools.py  types.py  ui.py  voice.py
tests/: test_cli.py  test_config.py  test_session.py  test_tools.py
